# turbocommerce

./: .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  CONTRIBUTING.md  README.md  docker-compose.yaml  docker-compose.yml  package.json  run_backend_migrate.sh  run_backend_tests.sh
api/: .env.example  README.md  pyproject.toml
api/turbocommerce/: db.sqlite3  manage.py
api/turbocommerce/turbocommerce/: asgi.py  settings.py  urls.py  wsgi.py
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_django_tests.sh
backend/src/: start_server.sh
backend/src/core/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/core/fixtures/: users.json
backend/src/core/migrations/: 0001_initial.py  0002_auto_20201108_1524.py  0002_auto_20210408_1451.py  0002_auto_20210511_1527.py  0003_auto_20201108_1714.py  0003_auto_20210418_2120.py  0003_remove_pincode_field.py  0003_remove_user_address_pincode.py
backend/src/core/tests/: tests.py  views.py
backend/src/customer/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/src/customer/migrations/: 0001_initial.py  0002_auto_20210411_1745.py  0002_remove_creditcard_edit_customershippingaddress.py  (+5 more)
backend/src/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/shipping/: admin.py  models.py
backend/src/src/: settings.py  urls.py  wsgi.py
backend/src/store/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/utils/: pagination.py  print.py  strings.py  tests.py
(+233 files in other folders)
