[tool.poetry]
name = "turbocommerce"
version = "0.1.0"
description = ""
authors = ["ashdaily <ashishsinghbardhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
