[tool.poetry]
name = "turbocommerce"
version = "0.1.0"
description = ""
authors = ["ashdaily <ashtokyo31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.2"
djangorestframework = "^3.12.1"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
django-cors-headers = "^3.5.0"
pyhustler = "^0.4.0"
django-sslserver = "^0.22"
djangorestframework-simplejwt = "^4.6.0"
Pillow = "^8.0.1"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
pudb = "^2019.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
